--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
       abbr = {ICRA'23},
       google_scholar_id={2osOgNQ5qMEC},
       booktitle={ICRA Workshops},
-      preview={vl-fields_thumbnail.png},
+      preview={vl-vl-fields_thumbnail_25.png},
       selected = {true},
       html = {../../vl-fields/},
       arxiv = {2305.12427},
@@ -32,7 +32,7 @@
   preprint = {false},
   google_scholar_id={9yKSN-GCB0IC},
   arxiv = {2209.03115},
-  preview={capsules_thumbnail.png}
+  preview={capsules_thumbnail_25.png}
 }
 
 % 2022
