update egcm preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@
   preprint = {false},
   google_scholar_id={9yKSN-GCB0IC},
   arxiv = {2209.03115},
-  preview={capsules_thumbnail_25.png}
+  preview={ecgm_thumbnail.gif}
 }
 
 % 2022
