update vlf preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
       abbr = {ICRA'23},
       google_scholar_id={2osOgNQ5qMEC},
       booktitle={ICRA Workshops},
-      preview={vl-fields_thumbnail_25.png},
+      preview={vl-fields_thumbnail.gif},
       selected = {true},
       html = {../../vl-fields/},
       arxiv = {2305.12427},
