update semg preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,5 +65,5 @@
   selected = {true},
   abbr = {IISA'19},
   google_scholar_id={u5HHmVD_uO8C},
-  preview={semg_thumbnail.png},
+  preview={semg_thumbnail.gif},
   }
