update about page layout, c2g link, contact info

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,12 +13,12 @@
       primaryClass={cs.RO},
       html = {../../click2grasp/},
       arxiv = {2403.14526},
-      bibtex_show={true},
+      bibtex_show={false},
 }
 
 
 @inproceedings{tsagkas2023vlfields,
-      bibtex_show={true},
+      bibtex_show={false},
       title={VL-Fields: Towards Language-Grounded Neural Implicit Spatial Representations}, 
       author={Tsagkas, Nikolaos and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
       year={2023},
@@ -34,7 +34,7 @@
 
 
 @ARTICLE{https://doi.org/10.48550/arxiv.2209.03115,
-  bibtex_show={true},
+  bibtex_show={false},
   doi = {10.48550/ARXIV.2209.03115},
   url = {https://arxiv.org/abs/2209.03115},
   author = {Nazabal, Alfredo and Tsagkas, Nikolaos and Williams, Christopher K. I.},
@@ -54,7 +54,7 @@
 
 % 2022
 @ARTICLE{nazabal2022inference,
-      bibtex_show={true},
+      bibtex_show={false},
       title={Inference for Generative Capsule Models}, 
       author={Alfredo Nazabal and Nikolaos Tsagkas and Christopher K. I. Williams},
       year={2022},
@@ -68,7 +68,7 @@
 
 % 2019
 @INPROCEEDINGS{8900709,
-  bibtex_show={true},
+  bibtex_show={false},
   author={Tsagkas, Nikolaos and Tsinganos, Panagiotis and Skodras, Athanassios},
   booktitle={10th International Conference on Information, Intelligence, Systems and Applications (IISA)}, 
   title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals}, 
