update c2g iros acceptance

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,26 +1,28 @@
 ---
+% bibtex_show={false}, to have bib in the homepage
 ---
 % 2024
 @inproceedings{tsagkas2024click,
-      title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors}, 
-      author={Tsagkas, Nikolaos and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
+      title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark><b>[Oral Pitch]</b></mark>}, 
+      author={<b>Tsagkas</b>, <b>Nikolaos</b> and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
       year={2024},
       eprint={2403.14526},
       preview={c2g_thumbnail.gif},
-      booktitle={ArXiv Preprint},
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
       html = {../../click2grasp/},
       arxiv = {2403.14526},
-      bibtex_show={false},
+      booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+      year={2024},
+      code = {https://github.com/tsagkas/click2grasp},
 }
 
 
+
 @inproceedings{tsagkas2023vlfields,
-      bibtex_show={false},
-      title={VL-Fields: Towards Language-Grounded Neural Implicit Spatial Representations}, 
-      author={Tsagkas, Nikolaos and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
+      title={VL-Fields: Towards Language-Grounded Neural Implicit Spatial Representations <mark><b>[Spotlight Talk]</mark>}, 
+      author={<b>Tsagkas</b>, <b>Nikolaos</b> and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
       year={2023},
       abbr = {ICRA'23},
       google_scholar_id={2osOgNQ5qMEC},
@@ -29,15 +31,13 @@
       selected = {true},
       html = {../../vl-fields/},
       arxiv = {2305.12427},
-
 }
 
 
 @ARTICLE{https://doi.org/10.48550/arxiv.2209.03115,
-  bibtex_show={false},
   doi = {10.48550/ARXIV.2209.03115},
   url = {https://arxiv.org/abs/2209.03115},
-  author = {Nazabal, Alfredo and Tsagkas, Nikolaos and Williams, Christopher K. I.},
+  author = {Nazabal*, Alfredo and <b>Tsagkas*</b>, <b>Nikolaos</b> and Williams, Christopher K. I.},
   title = {Inference and Learning for Generative Capsule Models},
   journal = {Neural Computation},
   publisher = {MIT},
@@ -54,7 +54,6 @@
 
 % 2022
 @ARTICLE{nazabal2022inference,
-      bibtex_show={false},
       title={Inference for Generative Capsule Models}, 
       author={Alfredo Nazabal and Nikolaos Tsagkas and Christopher K. I. Williams},
       year={2022},
@@ -68,8 +67,7 @@
 
 % 2019
 @INPROCEEDINGS{8900709,
-  bibtex_show={false},
-  author={Tsagkas, Nikolaos and Tsinganos, Panagiotis and Skodras, Athanassios},
+  author={<b>Tsagkas</b>, <b>Nikolaos</b> and Tsinganos, Panagiotis and Skodras, Athanassios},
   booktitle={10th International Conference on Information, Intelligence, Systems and Applications (IISA)}, 
   title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals}, 
   year={2019},
