update colorscheme for presentation type

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,8 @@
 ---
 % 2024
 @inproceedings{tsagkas2024click,
-      title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark><b>[Oral Pitch]</b></mark>}, 
+
+      title={<b>Click to Grasp</b>: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark style="background-color: #ABEBC6; color: black;">[Oral Pitch]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
       year={2024},
       eprint={2403.14526},
@@ -13,7 +14,7 @@
       primaryClass={cs.RO},
       html = {../../click2grasp/},
       arxiv = {2403.14526},
-      booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+      booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Abu Dhabi, UAE},
       year={2024},
       code = {https://github.com/tsagkas/click2grasp},
 }
@@ -21,12 +22,12 @@
 
 
 @inproceedings{tsagkas2023vlfields,
-      title={VL-Fields: Towards Language-Grounded Neural Implicit Spatial Representations <mark><b>[Spotlight Talk]</mark>}, 
+      title={<b>VL-Fields</b>: Towards Language-Grounded Neural Implicit Spatial Representations <mark style="background-color: #ABEBC6; color: black;">[Spotlight Talk]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
       year={2023},
       abbr = {ICRA'23},
       google_scholar_id={2osOgNQ5qMEC},
-      booktitle={ICRA Workshops},
+      booktitle={ICRA Workshops, London, UK},
       preview={vl-fields_thumbnail.gif},
       selected = {true},
       html = {../../vl-fields/},
@@ -68,8 +69,8 @@
 % 2019
 @INPROCEEDINGS{8900709,
   author={<b>Tsagkas</b>, <b>Nikolaos</b> and Tsinganos, Panagiotis and Skodras, Athanassios},
-  booktitle={10th International Conference on Information, Intelligence, Systems and Applications (IISA)}, 
-  title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals}, 
+  booktitle={10th International Conference on Information, Intelligence, Systems and Applications (IISA), Patras, Greece}, 
+  title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals <mark style="background-color: #ABEBC6; color: black;">[Oral Talk]</mark>}, 
   year={2019},
   volume={},
   number={},
