--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 % 2024
 @inproceedings{tsagkas2024click,
 
-      title={<b>Click to Grasp</b>: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark style="background-color: #ABEBC6; color: black;">[Oral Pitch]</mark>}, 
+      title={<b>Click to Grasp</b>: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark>[Oral Pitch]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
       year={2024},
       eprint={2403.14526},
@@ -22,7 +22,7 @@
 
 
 @inproceedings{tsagkas2023vlfields,
-      title={<b>VL-Fields</b>: Towards Language-Grounded Neural Implicit Spatial Representations <mark style="background-color: #ABEBC6; color: black;">[Spotlight Talk]</mark>}, 
+      title={<b>VL-Fields</b>: Towards Language-Grounded Neural Implicit Spatial Representations <mark>[Spotlight Talk]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
       year={2023},
       abbr = {ICRA'23},
@@ -70,7 +70,7 @@
 @INPROCEEDINGS{8900709,
   author={<b>Tsagkas</b>, <b>Nikolaos</b> and Tsinganos, Panagiotis and Skodras, Athanassios},
   booktitle={10th International Conference on Information, Intelligence, Systems and Applications (IISA), Patras, Greece}, 
-  title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals <mark style="background-color: #ABEBC6; color: black;">[Oral Talk]</mark>}, 
+  title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals <mark>[Oral Talk]</mark>}, 
   year={2019},
   volume={},
   number={},
