add Learning Precise Affordances paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,13 +2,28 @@
 % bibtex_show={false}, to have bib in the homepage
 ---
 % 2024
+
+@inproceedings{li2024learningpreciseaffordancesegocentric,
+      title={Learning Precise Affordances from Egocentric Videos for Robotic Manipulation}, 
+      author={Li, Gen and <b>Tsagkas</b>, <b>Nikolaos</b> and Song, Jifei and Mon-Williams, Ruaridh and Vijayakumar, Sethu and Shao, Kun and Sevilla-Lara, Laura},
+      eprint={2408.10123},
+      preview={affordance_thumbnail_150.gif},
+      selected = {true},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      html = {https://reagan1311.github.io/affgrasp/},
+      arxiv = {2408.10123},
+      booktitle={ArXiv Preprint},
+      year={2024},
+}
+
 @inproceedings{tsagkas2024click,
 
       title={<b>Click to Grasp</b>: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark>[Oral Pitch]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
       year={2024},
       eprint={2403.14526},
-      preview={c2g_thumbnail.gif},
+      preview={c2g_thumbnail_150.gif},
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
