copy affgrasp page locally

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      html = {https://reagan1311.github.io/affgrasp/},
+      html = {../../affgrasp/},
       arxiv = {2408.10123},
       booktitle={ArXiv Preprint},
       year={2024},
@@ -19,7 +19,7 @@
 
 @inproceedings{tsagkas2024click,
 
-      title={<b>Click to Grasp</b>: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark>[Oral Pitch]</mark>}, 
+      title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark>[Oral Pitch + Poster]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
       year={2024},
       eprint={2403.14526},
@@ -37,7 +37,7 @@
 
 
 @inproceedings{tsagkas2023vlfields,
-      title={<b>VL-Fields</b>: Towards Language-Grounded Neural Implicit Spatial Representations <mark>[Spotlight Talk]</mark>}, 
+      title={VL-Fields: Towards Language-Grounded Neural Implicit Spatial Representations <mark>[Spotlight Talk + Poster]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
       year={2023},
       abbr = {ICRA'23},
@@ -85,7 +85,7 @@
 @INPROCEEDINGS{8900709,
   author={<b>Tsagkas</b>, <b>Nikolaos</b> and Tsinganos, Panagiotis and Skodras, Athanassios},
   booktitle={10th International Conference on Information, Intelligence, Systems and Applications (IISA), Patras, Greece}, 
-  title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals <mark>[Oral Talk]</mark>}, 
+  title={On the Use of Deeper CNNs in Hand Gesture Recognition Based on sEMG Signals <mark>[Oral Presentation]</mark>}, 
   year={2019},
   volume={},
   number={},
