add afa project

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 % bibtex_show={false}, to have bib in the homepage
 ---
+% 2025
+@inproceedings{tsagkas2025pvrobo,
+      title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
+      author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Duolikun, Danier and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
+      preview={under_construction.jpg},
+      selected = {true},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      html = {../../pvrobo/},
+      booktitle={ArXiv Preprint},
+      year={2025},
+}
+
 % 2024
 
 @inproceedings{li2024learningpreciseaffordancesegocentric,
