update afa project

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,8 +4,8 @@
 % 2025
 @inproceedings{tsagkas2025pvrobo,
       title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
-      author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Duolikun, Danier and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
-      preview={under_construction.jpg},
+      author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Danier, Duolikun and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
+      preview={pvrobo_thumbnail_distractors.gif},
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
