--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,8 @@
       title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Danier, Duolikun and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
       preview={pvrobo_thumbnail_distractors_short.gif},
+      eprint={2502.03270},
+      arxiv = {2502.03270},
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
