--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,22 +2,21 @@
 % bibtex_show={false}, to have bib in the homepage
 ---
 % 2025
-@inproceedings{tsagkas2025pvrobo,
+@inproceedings{tsagkas2025pretrainedvisualrepresentationsfall,
       title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Danier, Duolikun and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
-      preview={pvrobo_thumbnail_distractors_short.gif},
       eprint={2502.03270},
-      arxiv = {2502.03270},
+      preview={pvrobo_thumbnail_distractors_short.gif},
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
       html = {../../pvrobo/},
+      arxiv = {2502.03270},
       booktitle={ArXiv Preprint},
       year={2025},
 }
 
 % 2024
-
 @inproceedings{li2024learningpreciseaffordancesegocentric,
       title={Learning Precise Affordances from Egocentric Videos for Robotic Manipulation}, 
       author={Li, Gen and <b>Tsagkas</b>, <b>Nikolaos</b> and Song, Jifei and Mon-Williams, Ruaridh and Vijayakumar, Sethu and Shao, Kun and Sevilla-Lara, Laura},
