add arxiv for pvrobo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,9 @@
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Danier, Duolikun and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
       eprint={2502.03270},
       preview={pvrobo_thumbnail_distractors_short.gif},
+      eprint={2502.03270},
+      arxiv = {2502.03270},
+      preview={pvrobo_thumbnail_distractors_short.gif},
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
