add code link to bibtex

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,7 @@
       arxiv = {2502.03270},
       booktitle={ArXiv Preprint},
       year={2025},
+      code = {https://github.com/tsagkas/pvrobo},
 }
 
 % 2024
