add cot project

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,19 @@
 % bibtex_show={false}, to have bib in the homepage
 ---
 % 2025
+@inproceedings{sochopoulos2025fastflowbasedvisuomotorpolicies,
+      title={Fast Flow-based Visuomotor Policies via Conditional Optimal Transport Couplings}, 
+      author={Sochopoulos, Andreas and Malkin, Nikolay and <b>Tsagkas</b>, <b>Nikolaos</b> and Moura, João and Gienger, Michael and Vijayakumar, Sethu},
+      eprint={2505.01179},
+      preview={zipper_16fps_240.gif},
+      selected = {true},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      html = {https://ansocho.github.io/cot-policy/},
+      arxiv = {2505.01179},
+      booktitle={ArXiv Preprint},
+      year={2025},
+}
 @inproceedings{tsagkas2025pretrainedvisualrepresentationsfall,
       title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Danier, Duolikun and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
