add code for cot

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@
       arxiv = {2505.01179},
       booktitle={ArXiv Preprint},
       year={2025},
+      code = {https://github.com/ansocho/cot_policy}
 }
 @inproceedings{tsagkas2025pretrainedvisualrepresentationsfall,
       title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
@@ -31,6 +32,7 @@
       booktitle={ArXiv Preprint},
       year={2025},
       code = {https://github.com/tsagkas/pvrobo},
+      google_scholar_id={W7OEmFMy1HYC},
 }
 
 % 2024
@@ -68,10 +70,10 @@
 
 
 @inproceedings{tsagkas2023vlfields,
+      abbr={PhysRev},
       title={VL-Fields: Towards Language-Grounded Neural Implicit Spatial Representations <mark>[Spotlight Talk + Poster]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
       year={2023},
-      abbr = {ICRA'23},
       google_scholar_id={2osOgNQ5qMEC},
       booktitle={ICRA Workshops, London, UK},
       preview={vl-fields_thumbnail.gif},
@@ -92,7 +94,6 @@
   copyright = {Creative Commons Attribution 4.0 International},
   code = {https://github.com/tsagkas/capsules},
   selected = {true},
-  abbr = {NC},
   preprint = {false},
   google_scholar_id={9yKSN-GCB0IC},
   arxiv = {2209.03115},
@@ -125,7 +126,6 @@
   code = {https://github.com/tsagkas/sEMG-HandGestureRecognition},
   pdf = {https://ieeexplore.ieee.org/document/8900709},
   selected = {true},
-  abbr = {IISA'19},
   google_scholar_id={u5HHmVD_uO8C},
   preview={semg_thumbnail.gif},
   }
