--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
       code = {https://github.com/ansocho/cot_policy}
 }
 @inproceedings{tsagkas2025pretrainedvisualrepresentationsfall,
-      title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
+      title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning <mark>[Oral EAI@CVPR25]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Sochopoulos, Andreas and Danier, Duolikun and Lu, Chris Xiaoxuan and Mac Aodha, Oisin},
       eprint={2502.03270},
       preview={pvrobo_thumbnail_distractors_short.gif},
