add Gen's ICCV paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,21 +35,20 @@
       google_scholar_id={W7OEmFMy1HYC},
 }
 
-% 2024
 @inproceedings{li2024learningpreciseaffordancesegocentric,
       title={Learning Precise Affordances from Egocentric Videos for Robotic Manipulation}, 
       author={Li, Gen and <b>Tsagkas</b>, <b>Nikolaos</b> and Song, Jifei and Mon-Williams, Ruaridh and Vijayakumar, Sethu and Shao, Kun and Sevilla-Lara, Laura},
-      eprint={2408.10123},
       preview={affordance_thumbnail_150.gif},
       selected = {true},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
       html = {../../affgrasp/},
       arxiv = {2408.10123},
-      booktitle={ArXiv Preprint},
-      year={2024},
+      booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Hawaii, USA},
+      year={2025},
 }
 
+% 2024
 @inproceedings{tsagkas2024click,
 
       title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark>[Oral Pitch + Poster]</mark>}, 
@@ -75,7 +74,7 @@
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Mac Aodha, Oisin and Xiaoxuan Lu, Chris},
       year={2023},
       google_scholar_id={2osOgNQ5qMEC},
-      booktitle={ICRA Workshops, London, UK},
+      booktitle={International Conference on Robotics and Automation (ICRA) Workshops, London, UK},
       preview={vl-fields_thumbnail.gif},
       selected = {true},
       html = {../../vl-fields/},
