--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
       primaryClass={cs.RO},
       html = {https://ansocho.github.io/cot-policy/},
       arxiv = {2505.01179},
-      booktitle={ArXiv Preprint},
+      booktitle={Conference on Robot Learning (CoRL), Seoul, South Korea},
       year={2025},
       code = {https://github.com/ansocho/cot_policy}
 }
