--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
       primaryClass={cs.RO},
       html = {https://ansocho.github.io/cot-policy/},
       arxiv = {2505.01179},
-      booktitle={Conference on Robot Learning (CoRL), Seoul, South Korea},
+      booktitle={ArXiv Preprint},
       year={2025},
       code = {https://github.com/ansocho/cot_policy}
 }
@@ -50,6 +50,7 @@
 
 % 2024
 @inproceedings{tsagkas2024click,
+
       title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors <mark>[Oral Pitch + Poster]</mark>}, 
       author={<b>Tsagkas</b>, <b>Nikolaos</b> and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
       year={2024},
